[package]
name = "GPU-Sandbox-Controller"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
toml = "0.9.10"
thiserror = "2.0.17"
wasmtime = "40.0.0"
